End of section 9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,5 @@
   {{title}}
 </h2>
 
-<ul>
-  <li class="list-unstyled" *ngFor="let product of products">{{product.name}}</li>
-</ul>
-
+<app-shop></app-shop>
 </div>
