--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 140px;">
-<h2>
-  {{title}}
-</h2>
-
-<app-shop></app-shop>
+  <router-outlet></router-outlet>
 </div>
