--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -8,7 +8,7 @@
 
         <div class="btn-group mt-auto">
             <button class="btn btn-outline-secondary me-2"><i class="fa fa-shopping-cart"></i></button>
-            <button class="btn btn-outline-secondary">View</button>
+            <button class="btn btn-outline-secondary" [routerLink]="'/shop/'+product.id">View</button>
         </div>
     </div>
 </div>
