--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
     <nav class="my-2 text-uppercase fs-5">
         <a class="p-2" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
         <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
-        <a class="p-2" routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contact</a>
+        <a class="p-2" routerLink="/test-error" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Errors</a>
     </nav>
 
     <div class="d-flex align-items-center">
