--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "../node_modules/ngx-bootstrap/datepicker/bs-datepicker";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
+
+label.xng-breadcrumb-trail{
+    color: orange;
+}
